Added Scale Parameter
